# resource_monitor

./: Cargo.toml  README.md
src/: cpu_temperature.rs  gpu_temperature.rs  lib.rs  main.rs  multi_threaded_implementation.rs  single_threaded_implementation.rs
