[package]
name = "resource_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.25.0"
eframe = "0.25.0"
egui_plot = "0.25.0"
glow = "0.13.0"
windows = {version = "0.52.0", features = ["Win32_System_Com", "Win32_System_Ole", "Win32_System_Wmi", "Win32_System_Rpc", "Win32_Security", "Win32_System_Variant", "Win32_Foundation", "Win32_UI_Shell_PropertiesSystem"]}